--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.0",
+    "eslint": "^5.4.0",
     "nodemon": "^1.12.1"
   }
 }
