--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "start": "nodemon src/index.js --exec babel-node",
     "build": "babel src -d build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "docker-build": "docker build --tag repo.treescale.com/ruifernandes/world-gov-api:latest .",
+    "docker-push": "docker push repo.treescale.com/ruifernandes/world-gov-api",
+    "production": "node index.js"
   },
   "repository": {
     "type": "git",
